Fix column container display on mobile

--- a/ClientSide/StyleSheets/Mobile/ColumnContainer.less
+++ b/ClientSide/StyleSheets/Mobile/ColumnContainer.less
@@ -2,12 +2,9 @@
 {
 	div.ColumnContainer
 	{
-		&.TwoColumn, &.ThreeColumn
-		{
-			-moz-column-count: 0 !important;
-			-webkit-column-count: 0 !important;
-			column-count: 0 !important;
-		}
+		-moz-column-count: 1 !important;
+		-webkit-column-count: 1 !important;
+		column-count: 1 !important;
 		/* width: 480px; */
 	}
 }
